# hexdoc-lsp

./: .pre-commit-config.yaml  README.md  hexdoc.toml  pyproject.toml
src/hexdoc_lsp/: __main__.py  server.py
